--- a/assets/styles/main.scss
+++ b/assets/styles/main.scss
@@ -17,7 +17,8 @@ body{
     align-items: center;
     justify-content: space-between;
     position: fixed;
-    color : white
+    color : white;
+    z-index: 1;
 }
 .section-navbar ul {
     list-style: none;
@@ -67,7 +68,7 @@ body{
     display: flex;
     justify-content: center;
     background-image: url('/assets/images/6.png');
-    z-index: 1;
+
     position: relative;
     top: -200px;
     padding-top: 200px;
@@ -93,4 +94,117 @@ body{
 h1{
     font-size: 50px;
     font-weight: bold;
+}
+
+.vt {
+    width: 100%;
+    display: flex;
+    justify-content: center;
+    padding-top: 200px;
+    color: white;
+    max-height: 1200px;
+    overflow: hidden;
+    margin-bottom: 10px;
+}
+
+.vt-youtube {
+    width: 50%;
+    height: 400px;
+    background: $primary;
+    border-radius: 50px;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+}
+
+.vt-youtube .title {
+    padding: 2%;
+    margin-left: 10px;
+    font-size: 20px;
+    font-weight: bold;
+    width: 100%; /* Agar title tidak terpengaruh oleh align-items: center */
+    text-align: left; /* Mengatur teks di kiri secara horizontal */
+}
+
+.vt-youtube .icon-wrapper {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-grow: 1;
+    width: 100%;
+}
+
+.vt-youtube .icon {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+    height: 100%;
+}
+
+.vt-youtube .icon img {
+    top: -100px;
+    width: 10%;
+}
+
+
+.calendar-month{
+    background: $secondary;
+    color: white;
+}
+
+.event{
+    width: 50%;
+}
+.event-item{
+    font-size: 20px;
+}
+.national{
+    background: $primary;
+    color: white;
+    padding : 5px 10px;
+    border-radius: 20px 20px 20px 20px;
+}
+
+.news{
+    background-image: url('/assets/images/bg3.png');
+    background-size: cover;
+    padding: 20px;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    margin-top: 50px;
+}
+.news img{
+    width: 20%;
+}
+
+.news button{
+    background: $red1;
+}
+
+.footer{
+    background-image: url('/assets/images/bg4.png');
+    background-size: cover;
+    padding: 20px;
+    display: flex;
+    margin-top: 50px;
+}
+
+.brand {
+    font-size: 20px;
+    font-weight: bold;
+    color: white;
+}
+
+.brand .motto{
+    font-size: 16px;
+    font-weight: 100;
+    font-style: italic;
+}
+
+.brand .address{
+    font-size: 18px;
+    font-weight: 100;
 }
